--- a/login.html
+++ b/login.html
@@ -4,33 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login</title>
+    <title>Admin Login - Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;600&display=swap"
+        rel="stylesheet">
     <style>
         body {
+            background-color: var(--bg-dark);
+            background-image:
+                radial-gradient(circle at 20% 20%, rgba(140, 57, 255, 0.15) 0%, transparent 40%),
+                radial-gradient(circle at 80% 80%, rgba(0, 242, 254, 0.15) 0%, transparent 40%);
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            margin: 0;
-            background-color: var(--bg-color);
+            overflow: hidden;
+            font-family: 'Outfit', sans-serif;
         }
 
         .login-card {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 40px;
-            border-radius: 15px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            width: 100%;
-            max-width: 400px;
+            background: var(--glass-bg);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
+            border: 1px solid var(--glass-border);
+            padding: 50px 40px;
+            border-radius: 24px;
+            width: 90%;
+            max-width: 420px;
             text-align: center;
-            backdrop-filter: blur(10px);
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Glow effect inside card */
+        .login-card::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.03) 0%, transparent 60%);
+            pointer-events: none;
         }
 
         .login-card h2 {
-            margin-bottom: 20px;
-            font-size: 2rem;
-            color: var(--text-color);
+            margin-bottom: 10px;
+            font-size: 2.2rem;
+            font-family: 'Space Grotesk', sans-serif;
+            font-weight: 700;
+            color: var(--text-main);
+            letter-spacing: -1px;
+        }
+
+        .login-card p.subtitle {
+            color: var(--text-muted);
+            font-size: 0.95rem;
+            margin-bottom: 30px;
         }
 
         .form-group {
@@ -41,39 +73,80 @@
         .form-group label {
             display: block;
             margin-bottom: 8px;
-            color: #aaa;
+            color: var(--text-main);
+            font-size: 0.9rem;
+            font-weight: 500;
+            margin-left: 5px;
+        }
+
+        .input-wrapper {
+            position: relative;
         }
 
         .form-group input {
             width: 100%;
-            padding: 12px;
-            border-radius: 8px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            background: rgba(0, 0, 0, 0.2);
-            color: white;
+            padding: 14px 16px;
+            border-radius: 12px;
+            border: 1px solid var(--glass-border);
+            background: rgba(255, 255, 255, 0.03);
+            color: var(--text-main);
             font-size: 1rem;
+            outline: none;
+            transition: all 0.3s ease;
+        }
+
+        .form-group input:focus {
+            border-color: var(--primary);
+            background: rgba(255, 255, 255, 0.07);
+            box-shadow: 0 0 0 4px rgba(140, 57, 255, 0.1);
         }
 
         .login-btn {
             width: 100%;
-            padding: 12px;
-            background: var(--primary-color);
+            padding: 14px;
+            background: var(--primary);
             color: white;
             border: none;
-            border-radius: 8px;
+            border-radius: 50px;
             font-size: 1rem;
+            font-weight: 600;
             cursor: pointer;
-            transition: background 0.3s;
+            transition: all 0.3s ease;
+            margin-top: 10px;
+            box-shadow: 0 5px 15px rgba(140, 57, 255, 0.3);
         }
 
         .login-btn:hover {
-            opacity: 0.9;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(140, 57, 255, 0.5);
+        }
+
+        .login-btn:active {
+            transform: translateY(0);
         }
 
         .error-msg {
+            background: rgba(255, 71, 87, 0.1);
+            border: 1px solid rgba(255, 71, 87, 0.3);
             color: #ff4757;
-            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 8px;
+            font-size: 0.9rem;
+            margin-bottom: 20px;
             display: none;
+        }
+
+        .back-link {
+            display: inline-block;
+            margin-top: 25px;
+            color: var(--text-muted);
+            text-decoration: none;
+            font-size: 0.9rem;
+            transition: color 0.3s;
+        }
+
+        .back-link:hover {
+            color: var(--text-main);
         }
     </style>
 </head>
@@ -81,21 +154,30 @@
 <body>
 
     <div class="login-card">
-        <h2>Admin Login</h2>
-        <div class="error-msg" id="error-msg">Invalid credentials</div>
+        <h2>Welcome Back</h2>
+        <p class="subtitle">Enter your credentials to access the admin panel</p>
+
+        <div class="error-msg" id="error-msg">
+            Invalid username or password
+        </div>
+
         <form id="login-form">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" id="username" required>
+                <div class="input-wrapper">
+                    <input type="text" id="username" placeholder="Enter username" required autocomplete="off">
+                </div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" required>
+                <div class="input-wrapper">
+                    <input type="password" id="password" placeholder="Enter password" required>
+                </div>
             </div>
-            <button type="submit" class="login-btn">Login</button>
+            <button type="submit" class="login-btn">Sign In</button>
         </form>
-        <p style="margin-top: 20px;"><a href="index.html" style="color: #aaa; text-decoration: none;">&larr; Back to
-                Portfolio</a></p>
+
+        <a href="index.html" class="back-link">Return to Portfolio</a>
     </div>
 
     <script src="auth.js"></script>
