--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
             </div>
             <div class="input-box">
               <label>Email</label>
-              <input type="email" placeholder="your@email.com" required>
+              <input type="email" id="contact-email" placeholder="your@email.com" pattern="[^\s@]+@[^\s@]+\.[^\s@]+"
+                title="Please enter a valid email address" required>
             </div>
           </div>
 
